--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Thumbs.db
 **/.vs/
 # prevent the original CV and letter document files from being tracked.
 docs/
+Peter Smith BG cover letter.pdf
+Peter Smith CV.pdf
